--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -225,7 +225,7 @@
                                     </ul>
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("PaidPayments","Payments")">
+                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","Payments")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path></svg><span>Payments</span>
                                     </a>
                                     @* <ul class="sidebar-submenu">
@@ -236,7 +236,7 @@
                                 </li>
 
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("PaidInvoices","Invoice")">
+                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","Invoice")">
                                         <svg b-ab5quygad7="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path b-ab5quygad7="" d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline b-ab5quygad7="" points="13 2 13 9 20 9"></polyline></svg><span>Invoice</span>
                                     </a>
                                     @* <ul class="sidebar-submenu">
@@ -356,6 +356,7 @@
     <script src="~/Dashboard/assets/js/datatable/datatables/datatable.custom.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 
 @*     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.10.8/sweetalert2.min.js"></script>
  *@    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
