--- a/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
@@ -220,6 +220,19 @@
                                             </div>
                                         </div>
 
+                                        <!-- Longitutde & Lantitude -->
+                                        <div class="col-sm-6 col-md-3">
+                                            <div class="mb-3">
+                                                <label for="longitude" class="form-label">Longitude</label>
+                                                <input type="text" class="form-control" id="longitude" value="@Model?.Longitude" name="Longitude">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 col-md-3">
+                                            <div class="mb-3">
+                                                <label for="latitude" class="form-label">Latitude</label>
+                                                <input type="text" class="form-control" id="latitude" value="@Model?.Latitude" name="Latitude">
+                                            </div>
+                                        </div>
 
                                         <!-- Fax -->
                                         <div class="col-sm-6 col-md-3">
@@ -369,7 +382,6 @@
 
     if (saveButton) {
         saveButton.addEventListener('click', function (event) {
-            console.log("111")
             event.preventDefault();
             const OwnerID = Number(document.getElementById('OwnerId') ? document.getElementById('OwnerId').value : '0');
             checkValidationsAndSubmit();
@@ -586,6 +598,8 @@
     const emailAddress2 = document.getElementById('EmailAddress2');
     const phoneNumber = document.getElementById('PhoneNumber');
     const phoneNumber2 = document.getElementById('PhoneNumber2');
+    const longitude = document.getElementById('longitude');
+    const latitude = document.getElementById('latitude');
     const website = document.getElementById('Website');
     const address = document.getElementById('Address');
     const FirstName = document.getElementById('FirstName');
