--- a/PMS-PropertyHapa.Admin/Views/Invoice/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Invoice/Index.cshtml
@@ -27,18 +27,19 @@
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <div class="right-side-header">
+                            <h2>Invoices</h2>
                         </div>
                     </div>
 
                     <div class="card-body">
                         <div class="table-responsive">
-                            <table class="table table-hover text-center display" id="invoiceTable">
-                                <thead class="table-dark">
+                            <table class="table" id="invoiceTable">
+                                <thead>
                                     <tr>
-                                        <th scope="col" class="tableHeaderbg">User Id</th>
-                                        <th scope="col" class="tableHeaderbg">Name</th>
-                                        <th scope="col" class="tableHeaderbg">Email</th>
-                                        <th scope="col" class="tableHeaderbg">Download Invoice</th>
+                                        <th style="width:290px!Important">User Id</th>
+                                        <th style="width:290px!Important">Name</th>
+                                        <th style="width:290px!Important">Email</th>
+                                        <th style="width:290px!Important">Download Invoice</th>
                                     </tr>
                                 </thead>
                                 <tbody>
