--- a/PMS-PropertyHapa.Admin/Views/Payments/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Payments/Index.cshtml
@@ -24,14 +24,14 @@
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <div class="right-side-header">
-
+                            <h2>Payments</h2>
                         </div>
                     </div>
 
                     <div class="card-body">
                         <div class="table-responsive">
-                            <table class="table table-hover text-center display" id="paymentTable">
-                                <thead class="table-dark">
+                            <table class="table" id="paymentTable">
+                                <thead>
                                     <tr>
                                         <th scope="col" class="tableHeaderbg">Payee</th>
                                         <th scope="col" class="tableHeaderbg">Amount</th>
